# pdfFiller

./: pyproject.toml  requirements.txt
pdffiller/core/: settings.py  urls.py
pdffiller/pdffiller/: apps.py  doc_filler.py  forms.py  urls.py  views.py
pdffiller/pdffiller/templates/pdffiller/: create_client.html  index.html  login.html  success.html
pdffiller/templates/: base.html
