[tool.poetry]
name = "pdffiller"
version = "0.1.0"
description = ""
authors = ["Ivan <korneichuk.ik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
putz = "^1.0.1"
fitz = "^0.0.1.dev2"
pymupdf = "^1.25.3"
faker = "^37.0.0"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
